# classin-downloader

./: .gitignore  CLAUDE.md  build.py  courses.txt  pyproject.toml
rpiv/todo/: fix-parallel-video-extraction.md
rpiv/validation/: code-audit-src-classin-downloader.md
src/classin_downloader/: __main__.py  app.py  auth.py  config.py  downloader.py  extractor.py  updater.py
