[project]
name = "classin-downloader"
version = "1.1.0"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.50",
    "rich>=13.0",
]

[project.scripts]
classin-dl = "classin_downloader.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/classin_downloader"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]
